<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jm</groupId>
    <artifactId>Edicof</artifactId>
    <version>3.0.5.2</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.7</version>
            <type>jar</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.7</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
        <dependency>
            <groupId>com.jm</groupId>
            <artifactId>ScriptletsJasper</artifactId>
            <version>7.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>5.6.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.3.2</version><!-- <version>2.2.3</version> -->
        </dependency>
        <dependency>
            <groupId>com.jm</groupId>
            <artifactId>Autocompleter</artifactId>
            <version>1.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
        <dependency>
            <groupId>com.toedter</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>beansbinding</artifactId>
            <version>1.2.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.40</version> <!-- <version>5.1.40</version> 8.0.16 -->
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <!--<dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.1.1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.0.0</version>
            <type>jar</type>
        </dependency>-->
        <dependency>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <version>1.7.16</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.12</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.3.9</version>
        </dependency>

    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <profiles>
        <profile>
            <id>dist</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>make-assembly</id> <!-- this is used for inheritance merges -->
                                <phase>package</phase>
                                <goals>
                                     <goal>single</goal>
                                </goals>
                             </execution>
                         </executions>
                          <configuration>
                               <archive>
                                   <manifest>
                                         <mainClass>com.jm.Edicof.GUI.Main</mainClass>
                                   </manifest>
                               </archive>
                               <descriptorRefs>
                                    <descriptorRef>jar-with-dependencies</descriptorRef>
                                    
                              </descriptorRefs>
                         </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
                        <artifactId>launch4j-maven-plugin</artifactId>
                        <version>1.7.16</version>
                        <executions>
                            <execution>
                                <id>l4j-clui</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>launch4j</goal>
                                </goals>
                                <configuration>
                                    <tasks>
                                        <echo>Hello world!</echo>
                                    </tasks>
                                    <headerType>gui</headerType>
                                    <dontWrapJar>false</dontWrapJar>
                                    <outfile>${project.basedir}/target/${project.name}.exe</outfile>
                                    <jar>${project.basedir}/target/${project.name}-${project.version}-jar-with-dependencies.jar</jar>
                                    <errTitle></errTitle>
                                    <icon>${project.basedir}/src/main/resources/group_gear.ico</icon>
                                    <classPath>
                                        <mainClass>com.jm.Edicof.GUI.Main</mainClass>
                                        <addDependencies>true</addDependencies>
                                        <preCp>anything</preCp>
                                    </classPath>
                                    <jre>
                                        <minVersion>1.0.0</minVersion>
                                        <opts>
                                            <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                        </opts>
                                    </jre>
                                    <splash>
                                        <file>${project.basedir}/src/main/resources/WALLPAPPER_EDO2_RED.bmp</file>
                                        <waitForWindow>true</waitForWindow>
                                        <timeout>60</timeout>
                                        <timeoutErr>true</timeoutErr>
                                    </splash>
                                    <versionInfo>
                                        <fileVersion>${project.version}</fileVersion>
                                        <txtFileVersion>${project.version}</txtFileVersion>
                                        <fileDescription>${project.name}</fileDescription>
                                        <copyright>MIT</copyright>
                                        <productVersion>${project.version}</productVersion>
                                        <txtProductVersion>${project.version}</txtProductVersion>
                                        <productName>${project.name}</productName>
                                        <originalFilename>${exeFileName}.exe</originalFilename>
                                        <internalName>${project.name}</internalName>
                                    </versionInfo>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <id>build-api</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <classpathScope></classpathScope>
                            <executable>C:\Program Files (x86)\Inno Setup 5\ISCC.exe</executable>
                            <!-- optional -->
                            <workingDirectory></workingDirectory>
                            <arguments>
                                <argument>/f${project.name}_Updater_${project.version}</argument><!-- Overrides OutputBaseFilename -->
                                <argument>/O${project.basedir}/target</argument> <!-- Output files to specified path -->
                                <argument>${project.basedir}/Updater.iss</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>    
    </profiles>
    <build>
        <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <configuration>
                <archive>
                  <manifest>
                    <mainClass>com.jm.Edicof.GUI.Main</mainClass>
                    <addDefaultImplementationEntries>
                      true
                    </addDefaultImplementationEntries>
                  </manifest>
                </archive>
              </configuration>
            </plugin>
        </plugins>
    </build>
    <description>538fc30856a58d888c141affab1178dff677e1cb</description>
</project>
